# tilth

./: .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  prek.toml
.cheese/affinage/: pr-50.md
.cheese/age/: mcp-27d-feedback.md  pr-stack-23-24-25.md
.cheese/cook/: mcp-27d-feedback.md
.cheese/cure/: mcp-27d-feedback.md  pr-50.md
.cheese/press/: mcp-27d-feedback.md
.cheese/specs/: fuzzy-path-resolution.md  grok-qualifier-disambiguation.md  mcp-27d-feedback.md  post-edit-parse-check.md  tilth-mcp-overhaul.md  tilth-search-revival.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  fuzz.yml  nightly.yml  release.yml  scorecard.yml
.hallouminate/: config.toml
.hallouminate/wiki/: edit-anchor-design.md  index.md  mcp-cwd-root-binding.md
.serena/: project.yml
agents/tilth-upstream/: routine.md  sources.yaml
benchmark/: PHASE4_PLAN.md  README.md  REPORT.md  analyze.py  analyze_exploration.py  check_stats.py  compare_versions.py  config.py  paired.py  parse.py  regrade.py  requirements.txt  run.py  stats.py  test_parse_opencode.py
benchmark/fixtures/: opencode_tilth.json  reset.py  setup_repos.py  tilth_mcp.json
benchmark/tasks/: __init__.py  base.py  express_tasks.py  fastapi_diff_tasks.py  fastapi_edit_tasks.py  fastapi_multi_edit_tasks.py  gin_multi_edit_tasks.py  gin_render_cascade_tasks.py  gin_render_runtime_tasks.py  gin_route_logic_nogit_tasks.py  gin_route_logic_tasks.py  gin_tasks.py  grok_tasks.py  ripgrep_tasks.py
benchmark/tests/: test_parse.py  test_required_matches.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: diff_parse.rs  outline.rs  strip.rs
fuzz/seeds/: README.md
fuzz/seeds/outline/: oom-rust-imports-9kb
npm/: install.js  package.json  run.js
npm-nightly/: install.js  package.json
oss-fuzz/: README.md
prompts/: mcp-base.md  mcp-edit.md
prompts/tools/: deps.md  diff.md  list.md  read.md  search.md  write.md
scripts/: regen-agents-md.sh  tilth-upstream-scan
skills/: SKILL.md
src/: budget.rs  cache.rs  edit.rs  edit_parse_check.rs  error.rs  format.rs  install.rs  lib.rs  main.rs  map.rs  mcp.rs  mcp_v2.rs  overview.rs  session.rs  timeout.rs  types.rs  util.rs
src/diff/: format.rs  matching.rs  mod.rs  overlay.rs  parse.rs
src/edit/: apply.rs  block.rs  integration_tests.rs  json.rs  mismatch.rs  mod.rs  parser.rs  recovery.rs  snapshots.rs  tag.rs
src/index/: bloom.rs  symbol.rs
src/lang/: bash.rs  c.rs  cpp.rs  csharp.rs  detection.rs  dockerfile.rs  elixir.rs  go.rs  java.rs  javascript.rs  kotlin.rs  make.rs  mod.rs  outline.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  spec.rs  swift.rs  treesitter.rs  tsx.rs  typescript.rs
src/mcp/: iso.rs  mod.rs  path_suffix.rs  tree.rs  write.rs
src/read/: fuzzy_path.rs  imports.rs  mod.rs  sections.rs
src/search/: alloc.rs  blast.rs  bloom_walk.rs  callee_query.rs  callees.rs  callers.rs  content.rs  deps.rs  facets.rs  grok.rs  (+7 more)
tests/: tilth-upstream-scan.bats
(+34 files in other folders)
