[package]
name = "tilth-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tilth]
path = ".."

[[bin]]
name = "outline"
path = "fuzz_targets/outline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "strip"
path = "fuzz_targets/strip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "diff_parse"
path = "fuzz_targets/diff_parse.rs"
test = false
doc = false
bench = false
